--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.4",
     "@tanstack/react-query-devtools": "4",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -50,6 +51,7 @@
     "embla-carousel-react": "^8.5.1",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.461.0",
+    "moment": "^2.30.1",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
