--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
@@ -55,11 +56,15 @@
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "nextjs-toploader": "^3.7.15",
+    "nuqs": "^2.2.3",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-countup": "^6.5.3",
+    "react-currency-input-field": "^3.9.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.8.3",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
