--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.61.5",
-    "@tanstack/react-query-devtools": "^4.36.1",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -63,6 +62,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-papaparse": "^4.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.8.3",
     "recharts": "^2.13.3",
