--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "drizzle-orm": "^0.36.4",
     "drizzle-zod": "^0.5.1",
     "embla-carousel-react": "^8.5.1",
+    "gsap": "^3.12.5",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.461.0",
     "moment": "^2.30.1",
@@ -63,6 +64,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.3.0",
     "react-papaparse": "^4.4.0",
     "react-resizable-panels": "^2.1.7",
     "react-select": "^5.8.3",
