--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "plugin:@tanstack/query/recommended"]
+  "extends": ["next/core-web-vitals", "next/typescript", "plugin:@tanstack/query/recommended"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
