--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-icons": "^5.3.0",
     "react-papaparse": "^4.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-scan": "^0.0.35",
     "react-select": "^5.8.3",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
